update the config to use keyword list and its dependent files

--- a/test.ipynb
+++ b/test.ipynb
@@ -1081,11 +1081,249 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test youtube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from googleapiclient.discovery import build\n",
+    "from google_auth_oauthlib.flow import InstalledAppFlow\n",
+    "from google.auth.transport.requests import Request\n",
+    "from time import sleep\n",
+    "#from kafka import KafkaProducer\n",
+    "import urllib.parse as p\n",
+    "import os\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=748525632533-e855cbm72q6217uhd35evfh8uhjc2ghj.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A52422%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fyoutube.force-ssl&state=cJ0piZXKuAGfS09SNdQGMOYKbgHa1n&access_type=offline\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "SCOPES = [\"https://www.googleapis.com/auth/youtube.force-ssl\"]\n",
+    "\n",
+    "def youtube_authenticate():\n",
+    "    os.environ[\"OAUTHLIB_INSECURE_TRANSPORT\"] = \"1\"\n",
+    "    api_service_name = \"youtube\"\n",
+    "    api_version = \"v3\"\n",
+    "    client_secrets_file = \"config/credential.json\"\n",
+    "    creds = None\n",
+    "    # the file token.pickle stores the user's access and refresh tokens, and is\n",
+    "    # created automatically when the authorization flow completes for the first time\n",
+    "    if os.path.exists(\"token.pickle\"):\n",
+    "        with open(\"token.pickle\", \"rb\") as token:\n",
+    "            creds = pickle.load(token)\n",
+    "    # if there are no (valid) credentials availablle, let the user log in.\n",
+    "    if not creds or not creds.valid:\n",
+    "        if creds and creds.expired and creds.refresh_token:\n",
+    "            creds.refresh(Request())\n",
+    "        else:\n",
+    "            flow = InstalledAppFlow.from_client_secrets_file(client_secrets_file, SCOPES)\n",
+    "            creds = flow.run_local_server(port=0)\n",
+    "        # save the credentials for the next run\n",
+    "        with open(\"token.pickle\", \"wb\") as token:\n",
+    "            pickle.dump(creds, token)\n",
+    "\n",
+    "    return build(api_service_name, api_version, credentials=creds)\n",
+    "def get_video_id_by_url(url):\n",
+    "    \"\"\"\n",
+    "    Return the Video ID from the video `url`\n",
+    "    \"\"\"\n",
+    "    # split URL parts\n",
+    "    parsed_url = p.urlparse(url)\n",
+    "    # get the video ID by parsing the query of the URL\n",
+    "    video_id = p.parse_qs(parsed_url.query).get(\"v\")\n",
+    "    if video_id:\n",
+    "        return video_id[0]\n",
+    "    else:\n",
+    "        raise Exception(f\"Wasn't able to parse video URL: {url}\")\n",
+    "def get_video_details(youtube, **kwargs):\n",
+    "    return youtube.videos().list(\n",
+    "        part=\"snippet,contentDetails,statistics\",\n",
+    "        **kwargs\n",
+    "    ).execute()\n",
+    "def search(youtube, **kwargs):\n",
+    "    return youtube.search().list(\n",
+    "        part=\"snippet\",\n",
+    "        **kwargs\n",
+    "    ).execute()\n",
+    "def create_message(video_id, video_response):\n",
+    "    items = video_response.get(\"items\")[0]\n",
+    "    # get the description\n",
+    "    snippet         = items[\"snippet\"]\n",
+    "    description   = snippet[\"description\"]\n",
+    "    publish_time  = snippet[\"publishedAt\"]\n",
+    "    return {\n",
+    "        'video id' : video_id,\n",
+    "        'description':description,\n",
+    "        'publish time' : publish_time,\n",
+    "        'keyword' : 'anies',#keyword list dari suatu political figures\n",
+    "        'figures' : ''#ini figuresnya siapa, kedua ini didapat dari config.py\n",
+    "    }\n",
+    "\n",
+    "# authenticate to YouTube API, only do this for first time using the script\n",
+    "youtube = youtube_authenticate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = search(youtube, q=\"python\", maxResults=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = response.get(\"items\")\n",
+    "next_page_token = response.get('nextPageToken')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response2 = search(youtube, q='python', maxResults=50, pageToken=next_page_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items2 = response2.get('items')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'kind': 'youtube#searchResult',\n",
+       " 'etag': 'VtYxmifOOFjjeny_0K9zgQD4R4A',\n",
+       " 'id': {'kind': 'youtube#playlist',\n",
+       "  'playlistId': 'PLZS-MHyEIRo59lUBwU-XHH7Ymmb04ffOY'},\n",
+       " 'snippet': {'publishedAt': '2020-04-17T03:50:56Z',\n",
+       "  'channelId': 'UCnrZ-UFSzeMSxKx_OHtwKsQ',\n",
+       "  'title': 'Belajar Python Bahasa Indonesia [Versi Baru]',\n",
+       "  'description': 'Mari kita bahas apa itu python dan kenapa harus belajar python. Kita akan bahas sejarah dan kelebihan python serta kenapa ...',\n",
+       "  'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/iA8lLwmtKQM/default.jpg',\n",
+       "    'width': 120,\n",
+       "    'height': 90},\n",
+       "   'medium': {'url': 'https://i.ytimg.com/vi/iA8lLwmtKQM/mqdefault.jpg',\n",
+       "    'width': 320,\n",
+       "    'height': 180},\n",
+       "   'high': {'url': 'https://i.ytimg.com/vi/iA8lLwmtKQM/hqdefault.jpg',\n",
+       "    'width': 480,\n",
+       "    'height': 360}},\n",
+       "  'channelTitle': 'Kelas Terbuka',\n",
+       "  'liveBroadcastContent': 'none',\n",
+       "  'publishTime': '2020-04-17T03:50:56Z'}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'kind': 'youtube#searchResult',\n",
+       " 'etag': 'txl9nuZXvOPH-8QLQJcOgsOa70A',\n",
+       " 'id': {'kind': 'youtube#video', 'videoId': 'qUeud6DvOWI'},\n",
+       " 'snippet': {'publishedAt': '2021-11-15T14:32:43Z',\n",
+       "  'channelId': 'UCaiL2GDNpLYH6Wokkk1VNcg',\n",
+       "  'title': '25 nooby Python habits you need to ditch',\n",
+       "  'description': 'Nooby Python habits give away your inexperience. Improve your code and your prestige just a bit by ditching those habits and ...',\n",
+       "  'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/qUeud6DvOWI/default.jpg',\n",
+       "    'width': 120,\n",
+       "    'height': 90},\n",
+       "   'medium': {'url': 'https://i.ytimg.com/vi/qUeud6DvOWI/mqdefault.jpg',\n",
+       "    'width': 320,\n",
+       "    'height': 180},\n",
+       "   'high': {'url': 'https://i.ytimg.com/vi/qUeud6DvOWI/hqdefault.jpg',\n",
+       "    'width': 480,\n",
+       "    'height': 360}},\n",
+       "  'channelTitle': 'mCoding',\n",
+       "  'liveBroadcastContent': 'none',\n",
+       "  'publishTime': '2021-11-15T14:32:43Z'}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items2[0]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#loop till the end of time\n",
+    "while True:#iterate over config.py aja terkait semua keyword dari semua figures\n",
+    "    response = search(youtube, q=\"python\", maxResults=50)\n",
+    "    items = response.get(\"items\")\n",
+    "    for item in items:\n",
+    "        try:\n",
+    "            # get the video ID\n",
+    "            video_id = item[\"id\"][\"videoId\"]\n",
+    "            # get the video details\n",
+    "            video_response = get_video_details(youtube, id=video_id)\n",
+    "            # print the video details\n",
+    "            message = create_message(video_id, video_response)\n",
+    "            #producer.send('youtube-api', value=message)\n",
+    "            print(message)\n",
+    "            print(\"=\"*50)\n",
+    "        except:\n",
+    "            continue\n",
+    "    sleep(10)"
+   ]
   }
  ],
  "metadata": {
